--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: https://mazhuang.org
 date_format: "ordinal"
 title: AUSTIN 
 subtitle: "未添加..."
-description: "马壮的个人博客，公众号：闷骚的程序员"
+description: “无，无"
 keywords: 码志, Zhuang Ma, mzlogin, mazhuang, 闷骚的程序员
 timezone: Asia/Shanghai
 encoding: "utf-8"
