--- a/_config.yml
+++ b/_config.yml
@@ -48,10 +48,10 @@ highlight_theme: github
 # ---------------- #
 #      Author      #
 # ---------------- #
-author: Zhuang Ma
+author: austin
 organization: 
 organization_url: 
-github_username: mzlogin
+github_username: 2640yang
 location: Wuhan, China
 email: chumpma@gmail.com
 
