--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: https://2640yang.org
+url: https://2640yang.github.io
 date_format: "ordinal"
 title: AUSTIN 
 subtitle: "未添加..."
