--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,10 +1,10 @@
 - sitename: GitHub
-  name: mzlogin
-  url: https://github.com/mzlogin
+  name: 2640yang
+  url: https://github.com/2640yang
 
-- sitename: 掘金
-  name: mzlogin
-  url: http://gold.xitu.io/user/570ddaeb2e958a005c63b2da
+- sitename: instagram
+  name: aus2785
+  url: https://www.instagram.com/aus2785?r=nametag
 
 - sitename: LinkedIn
   name: mazhuang
