--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,5 +1,6 @@
 - name: Software Engineer Keywords
   keywords:
+      - Java
       - C++
       - Python
       - Design Patterns
@@ -7,11 +8,13 @@
 - name: Mobile Developer Keywords
   keywords:
       - Android
-      
+      - Reverse Engineering
 
 - name: Windows Developer Keywords
   keywords:
       - Win32 SDK
+      - DuiLib
       - WTL
       - COM
       - WinDbg
+  
