--- a/_config.yml
+++ b/_config.yml
@@ -52,8 +52,8 @@ author: austin
 organization: 
 organization_url: 
 github_username: 2640yang
-location: Wuhan, China
-email: chumpma@gmail.com
+location: China
+email: 3033271348@qq.com
 
 # ---------------- #
 #    Navigation    #
