--- a/_config.yml
+++ b/_config.yml
@@ -130,11 +130,11 @@ disqus:
     username: 
 # https://imsun.net/posts/gitment-introduction/
 gitment:
-    owner: mzlogin
-    repo: blog-comments
+    owner: 2640yang
+    repo: 2640yang.github.io
     oauth:
-        client_id: d2e1cbbd298958076462
-        client_secret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
+        client_id:  b1e52ab9a19531f48286
+        client_secret: 9a32d3f681703223cc6a90b1c6702908afee3
 # https://github.com/gitalk/gitalk#install
 gitalk:
     owner: 2640yang
