--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl:
 url: https://2640yang.github.io
 date_format: "ordinal"
-title: AUSTIN 
+title: 首页
 subtitle: "首页"
 description: “无，无"
 keywords: Austin, 2640yang
