--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ components:
         enabled: true
     # 页面右上角，以及「关于」页面的二维码
     # 修改图片请替换 assets/images/qrcode.jpg
-    doubt:
+    qrcode:
         enabled: true
         image_alt: 闷骚的程序员
 # 压缩页面内容
