--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: https://2640yang.github.io
 date_format: "ordinal"
 title: 首页
 subtitle: "首页"
-description: “无，无"
+description: “小说，书评"
 keywords: Austin, 2640yang
 timezone: Asia/Shanghai
 encoding: "utf-8"
