--- a/_config.yml
+++ b/_config.yml
@@ -75,9 +75,9 @@ navs:
      href: /open-source/
      label: 开源
 
-  -
-    href: /wiki/
-    label: 书评
+#  -
+#    href: /wiki/
+#    label: 书评
 
   -
     href: /links/
