--- a/_config.yml
+++ b/_config.yml
@@ -141,11 +141,11 @@ gitment:
         client_id: a58a4977e15885ca8b25
         client_secret: 5bd1662801769c119de6a7c33d533b56284eb0db
 # https://github.com/gitalk/gitalk#install
-gitalk:
-    owner: 
-    repo: 
-    clientID: 985070f990672c1be1ba
-    clientSecret: 4594fa42905964b0623c9dc46c9bf0be67b871ae   
+# gitalk:
+#     owner: 
+#     repo: 
+#     clientID: 985070f990672c1be1ba
+#     clientSecret: 4594fa42905964b0623c9dc46c9bf0be67b871ae   
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : false
 
