--- a/_config.yml
+++ b/_config.yml
@@ -131,8 +131,8 @@ comments_provider: gitalk
 # !!!重要!!! 请修改下面这些信息为你自己申请的
 # !!!Important!!! Please modify infos below to yours
 # https://disqus.com
-disqus:
-    username: 
+disqus: true
+    username: https://yybooks0.github.io//
 # https://imsun.net/posts/gitment-introduction/
 gitment:
     owner: YYbooks0
@@ -147,7 +147,7 @@ gitalk:
     clientID: 985070f990672c1be1ba
     clientSecret: 4594fa42905964b0623c9dc46c9bf0be67b871ae   
 # 在使用其它评论组件时可点击显示 Disqus
-lazy_load_disqus : false
+lazy_load_disqus : true
 
 # ---------------- #
 #      Search      #
