--- a/_config.yml
+++ b/_config.yml
@@ -131,8 +131,8 @@ comments_provider: gitalk
 # !!!重要!!! 请修改下面这些信息为你自己申请的
 # !!!Important!!! Please modify infos below to yours
 # https://disqus.com
-disqus: true
-    username: https://yybooks0.github.io//
+disqus: 
+    username: austin
 # https://imsun.net/posts/gitment-introduction/
 gitment:
     owner: YYbooks0
