--- a/_config.yml
+++ b/_config.yml
@@ -132,7 +132,7 @@ comments_provider: gitalk
 # !!!Important!!! Please modify infos below to yours
 # https://disqus.com
 disqus: 
-    username: austin
+    username: disqus_zCcUsfy9PE
 # https://imsun.net/posts/gitment-introduction/
 gitment:
     owner: YYbooks0
