--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ highlight_theme: github
 author: austin
 organization: 
 organization_url: 
-github_username: 2640yang
+github_username: YYbooks0
 location: China
 email: 3033271348@qq.com
 
