--- a/_config.yml
+++ b/_config.yml
@@ -146,6 +146,24 @@ gitalk:
     repo: YYbooks0.github.io
     clientID: 985070f990672c1be1ba
     clientSecret: 4594fa42905964b0623c9dc46c9bf0be67b871ae   
+<!-- 来必力City版安装代码 -->
+<div id="lv-container" data-id="city" data-uid="MTAyMC81NDIwNC8zMDY3Ng==">
+	<script type="text/javascript">
+   (function(d, s) {
+       var j, e = d.getElementsByTagName(s)[0];
+
+       if (typeof LivereTower === 'function') { return; }
+
+       j = d.createElement(s);
+       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+       j.async = true;
+
+       e.parentNode.insertBefore(j, e);
+   })(document, 'script');
+	</script>
+<noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
+</div>
+<!-- City版安装代码已完成 --> 
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : true
 
