--- a/_config.yml
+++ b/_config.yml
@@ -127,7 +127,7 @@ collections:
 #      Comments    #
 # ---------------- #
 # support provider: disqus, gitment, gitalk
-comments_provider: #disqus
+comments_provider: disqus
 # !!!重要!!! 请修改下面这些信息为你自己申请的
 # !!!Important!!! Please modify infos below to yours
 # https://disqus.com
@@ -146,7 +146,7 @@ gitalk:
     repo: YYbooks0.github.io
     clientID: 985070f990672c1be1ba
     clientSecret: 4594fa42905964b0623c9dc46c9bf0be67b871ae   
-
+    
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : true
 
@@ -157,7 +157,7 @@ simple_jekyll_search:
     # 是否支持全文搜索
     fulltext: false
     # 最多显示多少条搜索结果
-    limit: 10
+    limit: 15
 
 # ---------------- #
 #      Google      #
