--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title: YYbooks0
 subtitle: "小说-书评"
 description: “小说，书评"
 keywords: 小说，书评
-timezone: Asia/Shanghai
+timezone: YYbooks0/Shanghai
 encoding: "utf-8"
 repository: YYbooks0/YYbooks0.github.io
 # 对 css 和 js 资源的 cdn 加速配置
@@ -36,7 +36,7 @@ components:
     # 页面右上角，以及「关于」页面的二维码
     # 修改图片请替换 assets/images/qrcode.jpg
     qrcode:
-        enabled: true
+        enabled: false
         image_alt: yybooks
 # 压缩页面内容
 compress_html:
